# 3D-Game-Engine

./: .gitignore  CMakeLists.txt  README.md
include/: Camera.h  Components.h  ECS.h  GameEngine.h  LightingShaders.h  OBJLoader.h  Renderer.h  Shaders.h  Systems.h
src/: MedicalSimulator.cpp.txt  main.cpp1.txt
